P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/20_invalid_missing_field.lava
record Point(int x);
Point p = new Point(1);
int y = p.y;
